fix(plugins/plugin-client-common): In some themes, grid inner text color can have low contrast.
Fixes #6032

--- a/plugins/plugin-client-common/web/scss/components/Table/badges.scss
+++ b/plugins/plugin-client-common/web/scss/components/Table/badges.scss
@@ -41,7 +41,7 @@ $grid-cell-size: 1.25rem;
     &.gray-background,
     &.kui--status-unknown {
       background: var(--color-base05);
-      color: var(--color-base07);
+      color: var(--color-base00);
     }
   }
 }
